# nsh-dt

./: .gitignore  README.md  ai_manager.py  build_exe.bat  consolidate_poetry.py  knowledge_base_manager.py  main.py  ocr_manager.py  pyproject.toml  requirements.txt  screenshot_tool.py  settings.json.example  settings_window.py  split_database.py
.claude/: settings.local.json
ui/: __init__.py  components.py  theme.py
